generate proper javadoc for aggregator module