@@ -47,33 +47,18 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<configuration>
-					<!-- this jar has no sources, causing javadoc:javadoc to fail, see https://issues.apache.org/jira/browse/MJAVADOC-274 -->
-					<skip>true</skip>
+					<!-- we need to explicitly specify the module, otherwise javadoc fails because there are no classes to document -->
+					<!-- see https://bugs.openjdk.org/browse/JDK-8193107, see https://issues.apache.org/jira/browse/MJAVADOC-274 -->
+					<additionalOptions>
+						<option>--module org.cryptomator.jfuse</option>
+						<option>--expand-requires transitive</option>
+						<option>--enable-preview</option>
+					</additionalOptions>
+					<includeDependencySources>true</includeDependencySources>
+					<dependencySourceIncludes>
+						<dependencySourceInclude>org.cryptomator:*</dependencySourceInclude>
+					</dependencySourceIncludes>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>default-jar</id>
-						<phase>package</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-					<execution>
-						<!-- create an empty javadoc jar, required for Maven Central, even if maven-javadoc-plugin can't create one -->
-						<id>javadoc-jar</id>
-						<phase>package</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-						<configuration>
-							<classifier>javadoc</classifier>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
